# frc_sysid

./: .gitignore  CMakeLists.txt  DataLog.py  SysIdProblem.py  config.py  convert.py  dump_data.py  run.py  utils.py  visualize_poses.py
c++/: CMakeLists.txt
c++/include/: config.hh  optimizer.hh  sys_id_problem.hh  utils.hh
c++/include/sensors/: apriltag.hh  imu.hh  odometry.hh  sensor_manager.hh
c++/src/: main.cc  optimizer.cc  sys_id_problem.cc  utils.cc
c++/src/sensors/: apriltag.cc  odometry.cc
include/: config.hh  optimizer.hh  sys_id_problem.hh  utils.hh
include/sensors/: apriltag.hh
optim/: GTSAMOptimizer.py  TorchOptimizer.py  pose.py
python/: dump_data.py  logreader.py
sensors/: AprilTag.py  IMU.py  Odometry.py  SensorManager.py
src/: main.cc  optimizer.cc  sys_id_problem.cc  utils.cc
src/sensors/: apriltag.cc  imu.cc  odometry.cc
wpilib/: logreader.py
